@@ -382,7 +382,7 @@ class EndToEndTest extends FunSuite with BeforeAndAfter {
 
       val client = ClientBuilder()
         .codec(Http().enableTracing(true))
-        .hosts(Seq(server.localAddress))
+        .hosts(Seq(server.boundAddress))
         .hostConnectionLimit(1)
         .name("client")
         .build()
@@ -403,7 +403,7 @@ class EndToEndTest extends FunSuite with BeforeAndAfter {
 
       val client = ClientBuilder()
         .codec(Http())
-        .hosts(Seq(server.localAddress))
+        .hosts(Seq(server.boundAddress))
         .hostConnectionLimit(1)
         .name("client")
         .build()
@@ -436,7 +436,7 @@ class EndToEndTest extends FunSuite with BeforeAndAfter {
 
       val client = ClientBuilder()
         .codec(Http().streaming(true))
-        .hosts(Seq(server.localAddress))
+        .hosts(Seq(server.boundAddress))
         .hostConnectionLimit(1)
         .name("client")
         .build()
